[package]
name = "hachimi_lib"
description = "Common Hachimi components library"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Hachimi-Hachimi/hachimi_lib"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2"
textwrap = "0.16"